@startuml Database Schema

entity "users" {
  +id: uuid <<PK>>
  --
  email: varchar
  password_hash: varchar
  name: varchar
  bio: text
  birth_date: date
  gender: varchar
  created_at: timestamp
  updated_at: timestamp
}

entity "subscription_features" {
  +id: uuid <<PK>>
  --
  name: varchar
  description: text
  created_at: timestamp
  updated_at: timestamp
}

entity "user_features" {
  +id: uuid <<PK>>
  --
  #user_id: uuid <<FK>>
  #feature_id: uuid <<FK>>
  value: integer
  start_date: timestamp
  end_date: timestamp
  status: varchar
  created_at: timestamp
  updated_at: timestamp
}

entity "profile_responses" {
  +id: uuid <<PK>>
  --
  #from_user_id: uuid <<FK>>
  #to_user_id: uuid <<FK>>
  response_type: varchar  ' "like" or "pass"
  created_at: timestamp
  updated_at: timestamp
}

users ||--o{ user_features
users ||--o{ profile_responses
subscription_features ||--o{ user_features

@enduml